# pytopomojo

./: .gitattributes  .gitignore  CLAUDE.md  README.md  makefile  pyproject.toml  pytopomojo-github.code-workspace  setup.py
.devcontainer/: .env.example  .gitignore  Dockerfile  devcontainer.json  postcreate.sh
.devcontainer/.aws/: credentials.example
.devcontainer/scripts/: prepare-ssh-agent.sh
.github/workflows/: publish.yaml
pytopomojo/: __init__.py  pytopomojo.py  requirements.txt
pytopomojo/examples/: create-workspace.py  download-all-workspaces.py  get-disks-from-workspaces.py  upload-workspaces.py
